--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7121,44 +7121,14 @@ RTL - Right to Left
 
 }
 
-/* Modal Background */
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1000;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+
+/* a {
+  pointer-events: none;
 }
 
-/* Modal Content */
-.modal-content {
-  background: white;
-  padding: 20px;
-  width: 350px;
-  text-align: center;
-  border-radius: 10px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
-}
-
-/* Close Button */
-.close {
-  position: absolute;
-  top: 40px;
-  right: 20px;
-  font-size: 28px;
+a[href^="mailto:"] {
+  pointer-events: auto !important;
+  
+  
   cursor: pointer;
-}
-
-/* Doctor Image */
-.doctor-photo {
-  width: 100%;
-  border-radius: 8px;
-  margin-bottom: 10px;
-}
-
+} */
